examples/invalid/syntaxErr/function/functionScopeDef.wacc
# attempted function definition in new scope
# Output:
# #syntax error#

#Program:#

begin
  begin
	  int f() is
		  return 0 
	  end

    int x = call f();
    println x
  end
end
	
